# cilly-trading-signal

./: .env.example  .gitignore  AGENTS.md  README.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260513_0001_initial_schema.py  20260516_0002_signal_explainability_fields.py  20260516_0003_alert_foundation.py  20260517_0004_signal_review_note.py  20260517_0005_signal_review_events.py  20260529_0006_market_data_source_freshness.py  20260530_0007_screener_imports.py  20260530_0008_review_batches.py  20260531_0009_review_entry_revisions.py  20260531_0010_review_entry_finding_category_audit.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  alert.py  enums.py  market_data.py  review.py  screener.py  settings.py  signal.py  trade.py  types.py  user.py  (+1 more)
apps/api/tests/: test_alerts_api.py  test_analysis_quality.py  test_analysis_timeframes.py  test_auth_api.py  test_base_breakout_long.py  test_calibration_e2e_fixtures.py  test_calibration_golden_cases.py  test_config.py  test_export_api.py  test_health.py  test_imports_api.py  test_indicators.py  test_market_data_sync.py  test_migrations.py  test_models.py  test_performance_api.py  test_reviews_api.py  test_screener_api.py  test_settings_api.py  test_signal_contracts.py  test_signal_orchestrator.py  test_signals_api.py  test_swing_structure.py  test_trades_api.py  test_trend_pullback_long.py  test_watchlist_api.py  test_webhooks_api.py
(+216 files in other folders)
