[project]
name = "cilly-trading-signal-api"
version = "0.1.0"
description = "FastAPI backend for the Cilly Trading Signal app."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "fastapi[standard]>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "sqlalchemy>=2.0.34",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
